fix for report neighborhood listing line wrap

--- a/src/less/report.less
+++ b/src/less/report.less
@@ -114,7 +114,7 @@ body { background: #ccc; }
     }
     h4 {
         margin-top: 5px;
-        font-size: 1.1em;
+        font-size: 1em;
     }
     .metric-box {
         width: 100%;
